Improve project description and README

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sonnar",
   "version": "0.1.0",
-  "description": "Building page object-like APIs for testing web pages.",
+  "description": "Building page-object-like JS APIs for end-to-end testing web pages.",
   "bugs": {
     "url": "https://github.com/clebert/sonnar/issues"
   },
