Sonnar is now a TypeScript API for constructing XPath 1.0 expressions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sonnar",
   "version": "0.2.0",
-  "description": "Building page-object-like JS APIs for end-to-end testing web pages.",
+  "description": "A lightweight TypeScript API for constructing XPath 1.0 expressions.",
   "bugs": {
     "url": "https://github.com/clebert/sonnar/issues"
   },
@@ -23,6 +23,7 @@
     "build:cjs": "tsc --project tsconfig.cjs.json --incremental --pretty",
     "build:esm": "tsc --project tsconfig.esm.json --incremental --pretty",
     "ci": "run-p format:test lint test build",
+    "postci": "size-limit",
     "format": "prettier --write '**/*.{html,js,json,md,ts,tsx,yml}'",
     "format:test": "prettier --list-different '**/*.{html,js,json,md,ts,tsx,yml}'",
     "lint": "tslint --config tslint.json --project tsconfig.json --format verbose",
@@ -34,11 +35,19 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@size-limit/preset-small-lib": "^4.10.1",
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "size-limit": "^4.10.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "lib/esm/index.js",
+      "limit": "700 B"
+    }
+  ]
 }
