--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "module": "lib/esm/index.js",
   "types": "lib/esm/index.d.ts",
   "files": [
-    "lib"
+    "lib/cjs",
+    "lib/esm"
   ],
   "scripts": {
     "build": "run-p build:*",
