Drop support for CommonJS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,28 @@
 name: CI
-on: [push, pull_request]
-
+on:
+  push:
+  pull_request:
+  release:
+    types:
+      - published
 jobs:
   ci:
-    runs-on: macos-latest
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set Node.js version
-        run: echo NODE_VERSION=$(cat .node-version) >> $GITHUB_ENV
-
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
-
+          node-version-file: .node-version
       - name: Install dependencies
-        run: npm install
-
+        uses: bahmutov/npm-install@v1
       - name: Run CI checks
         run: npm run ci
+      - name: Publish to npm
+        if: ${{ github.event_name == 'release' }}
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        run: |
+          npm config set //registry.npmjs.org/:_authToken $NPM_AUTH_TOKEN
+          npm publish
