--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,14 @@
-coverage
-lib
-node_modules
-package.json
+/.prettierrc.json
+/LICENSE*
+/.eslintrc.json
+/coverage
+/jest.config.json
+/package-lock.json
+/.swcrc
+/tsconfig.base.json
+/tsconfig.json
+/lib
+/tsconfig.emit.json
+/tsconfig.eslint.json
+/.vscode/extensions.json
+/.vscode/settings.json
