--- a/package.json
+++ b/package.json
@@ -2,53 +2,42 @@
   "name": "sonnar",
   "version": "0.7.0",
   "description": "A lightweight TypeScript API for constructing XPath 1.0 expressions.",
-  "bugs": {
-    "url": "https://github.com/clebert/sonnar/issues"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/clebert/sonnar.git"
   },
   "license": "MIT",
-  "author": "Clemens Akens <clebert@me.com>",
+  "author": "Clemens Akens",
   "sideEffects": false,
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
-  "types": "lib/esm/index.d.ts",
+  "type": "module",
+  "exports": "./lib/index.js",
   "files": [
-    "lib/cjs",
-    "lib/esm"
+    "lib"
   ],
   "scripts": {
-    "build": "run-p build:*",
-    "build:cjs": "tsc --project tsconfig.cjs.json --incremental --pretty",
-    "build:esm": "tsc --project tsconfig.esm.json --incremental --pretty",
-    "ci": "run-p format:test lint test build",
-    "postci": "size-limit",
-    "format": "prettier --write '**/*.{html,js,json,md,ts,tsx,yml}'",
-    "format:test": "prettier --list-different '**/*.{html,js,json,md,ts,tsx,yml}'",
-    "lint": "tslint --config tslint.json --project tsconfig.json --format verbose",
+    "ci": "run-p compile:check compile:emit format:check lint test",
+    "compile:check": "tsc",
+    "compile:emit": "tsc --project tsconfig.emit.json",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
+    "lint": "eslint .",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --silent --passWithNoTests",
     "release": "npm version",
-    "postrelease": "git push --follow-tags",
-    "test": "jest"
+    "postrelease": "git push --follow-tags"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-typescript": "^7.13.0",
-    "@size-limit/preset-small-lib": "^4.10.1",
-    "@types/jest": "^26.0.20",
-    "jest": "^26.6.3",
+    "@jest/globals": "^29.5.0",
+    "@swc/core": "^1.3.41",
+    "@swc/jest": "^0.2.24",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-markdown": "^3.0.0",
+    "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "size-limit": "^4.10.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.2.3"
-  },
-  "size-limit": [
-    {
-      "path": "lib/esm/index.js",
-      "limit": "800 B"
-    }
-  ]
+    "prettier": "^2.8.4",
+    "typescript": "^5.0.2"
+  }
 }
